AMDP-294 Fix image cropping on ipad

--- a/web/themes/custom/emoney_apigee_kickstart/sass/pages/_use_case.scss
+++ b/web/themes/custom/emoney_apigee_kickstart/sass/pages/_use_case.scss
@@ -72,10 +72,6 @@ $delete-bg: #a83e24;
       .text-image__field-image {
         width: 460px;
         height: 290px;
-        border-radius: 4px;
-        border: 1px solid $gray_lightness;
-        background-color: $white;
-        box-shadow: 0 0 8px 3px rgba(0, 0, 0, 0.05);
         padding: 10px 10px;
 
         @media only screen and (min-width: 1200px) {
